[package]
name = "carbon-jito-shredstream-grpc-datasource"
description = "Jito Shredstream gRPC Datasource"
license = { workspace = true }
version = "0.8.1"
edition = { workspace = true }
readme = "README.md"
repository = { workspace = true }
keywords = ["solana", "indexer", "shredstream", "datasource"]
categories = ["encoding"]

[lib]
crate-type = ["rlib"]

[dependencies]
carbon-core = { workspace = true }
solana-client = { workspace = true }
solana-entry = { workspace = true }
solana-message = { workspace = true }
solana-pubkey = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-status = { workspace = true }

async-trait = { workspace = true }
bincode = { workspace = true }
carbon-jito-protos = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
scc = "2.3.4"
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }

shredstream-lazy-deserialize = { git = "ssh://github-rust-project/txt5620/shredstream-lazy-deserialize.git" }
